--- a/src/global_styling/theme_dark_variables.scss
+++ b/src/global_styling/theme_dark_variables.scss
@@ -11,5 +11,7 @@ $euiColorPrimary: #4da1c0;
 $euiColorDanger: #bf4d4d;
 $euiTextColor: #DDD;
 
+$euiFocusBackgroundColor: #191919;
+
 // Configuration
 @import 'variables/index';
