--- a/src/components/tabs/_tabs.scss
+++ b/src/components/tabs/_tabs.scss
@@ -25,7 +25,7 @@
 
   &.euiTab-isSelected {
     cursor: default;
-    color: $euiColorSecondary;
+    color: $euiColorPrimary;
 
     &:after {
       position: absolute;
@@ -34,7 +34,7 @@
       content: ' ';
       width: 100%;
       height: $euiBorderWidthThick;
-      background-color: $euiColorSecondary;
+      background-color: $euiColorPrimary;
       animation: euiTab $euiAnimSpeedFast $euiAnimSlightResistance;
     }
   }
