--- a/src/components/popover/_popover.scss
+++ b/src/components/popover/_popover.scss
@@ -7,6 +7,7 @@
 .euiPopover {
   display: inline-block;
   position: relative;
+  vertical-align: middle;
 
   // Open state happens on the wrapper and applies to the panel.
   &.euiPopover-isOpen {
