Remove unneaded downloads on index, fix caret in side nav (#129)
* remove un-neaded downloads on index, fix caret in side nav

--- a/src/components/side_nav/_side_nav.scss
+++ b/src/components/side_nav/_side_nav.scss
@@ -8,6 +8,7 @@
 
       > .euiSideNavItem {
         margin-left: $euiSize;
+        width: calc(100% - #{$euiSize});
       }
 
       > .euiSideNavGroup {
