--- a/src/components/button/button_empty/_button_empty.scss
+++ b/src/components/button/button_empty/_button_empty.scss
@@ -1,9 +1,15 @@
+/**
+ * 1. We don't want any of the animations that come inherited from the mixin.
+ *    These should act like normal links instead.
+ */
 .euiButtonEmpty {
   @include euiButton;
 
   border-color: transparent;
   background-color: transparent;
   box-shadow: none;
+  transform: none !important; // 1
+  animation: none !important; // 1
 
   .euiButtonEmpty__content {
     @include euiButtonContent;
@@ -73,11 +79,7 @@ $buttonTypes: (
     }
 
     &:hover {
-      @if ($name == 'text') {
-        background-color: transparent;
-      } @else {
-        background-color: transparentize($color, .9);
-      }
+      background-color: transparent;
 
       @if ($name == 'disabled') {
         cursor: not-allowed;
