Keep using <pre> for code blocks. (#139)
* Keep using <pre> for code blocks.

* bunch of tests, address @cjcenizal's comments

* Update tests and cleanup the changelog

* but inline

--- a/src/components/code/_code_block.scss
+++ b/src/components/code/_code_block.scss
@@ -50,7 +50,7 @@
     padding:  0 $euiSizeXS;
     background: $euiColorLightestShade;
 
-    .euiCodeBlock__pre, .euiCodeBlock__code {
+    .euiCodeBlock__code {
       display: inline;
       white-space: normal;
     }
