Form fields now have a loading state (#150)
Form fields can now show in a loading state if passed the `isLoading` prop.

--- a/src/components/form/_index.scss
+++ b/src/components/form/_index.scss
@@ -20,6 +20,19 @@ $euiFormBackgroundColor: tintOrShade($euiColorLightestShade, 60%, 25%);
   }
 }
 
+@mixin euiFormControlIsLoading($isNextToIcon: false) {
+
+  @at-root {
+    #{&}-isLoading {
+      @if ($isNextToIcon) {
+        padding-right: $euiSizeXXL + $euiSize;
+      } @else {
+        padding-right: $euiSizeXXL;
+      }
+    }
+  }
+}
+
 /**
  * 1. Override invalid state with focus state.
  */
