--- a/src/components/form/field_number/_field_number.scss
+++ b/src/components/form/field_number/_field_number.scss
@@ -1,4 +1,5 @@
 .euiFieldNumber {
   @include euiFormControlStyle;
   @include euiFormControlWithIcon($isIconOptional: true);
+  @include euiFormControlIsLoading;
 }
