--- a/src/components/form/field_text/_field_text.scss
+++ b/src/components/form/field_text/_field_text.scss
@@ -1,4 +1,5 @@
 .euiFieldText {
   @include euiFormControlStyle;
   @include euiFormControlWithIcon($isIconOptional: true);
+  @include euiFormControlIsLoading;
 }
