--- a/src/components/form/select/_select.scss
+++ b/src/components/form/select/_select.scss
@@ -3,6 +3,7 @@
  */
 .euiSelect {
   @include euiFormControlStyle;
+  @include euiFormControlIsLoading($isNextToIcon: true);
 
   padding-right: $euiSizeXXL; /* 1 */
   appearance: none;
