--- a/src/components/form/field_password/_field_password.scss
+++ b/src/components/form/field_password/_field_password.scss
@@ -1,4 +1,5 @@
 .euiFieldPassword {
   @include euiFormControlStyle;
   @include euiFormControlWithIcon($isIconOptional: false);
+  @include euiFormControlIsLoading;
 }
