--- a/src/components/icon/_icon.scss
+++ b/src/components/icon/_icon.scss
@@ -25,6 +25,10 @@
   fill: $euiColorSecondary;
 }
 
+.euiIcon--success {
+  fill: $euiColorSuccess;
+}
+
 .euiIcon--accent {
   fill: $euiColorAccent;
 }
