--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -14,6 +14,7 @@
 @import 'flex/index';
 @import 'form/index';
 @import 'header/index';
+@import 'health/index';
 @import 'horizontal_rule/index';
 @import 'icon/index';
 @import 'key_pad_menu/index';
