--- a/src/components/page/_page.scss
+++ b/src/components/page/_page.scss
@@ -1,9 +1,9 @@
 .euiPage {
-  padding: $euiSizeL;
+  padding: $euiSize;
 }
 
 @include screenXSmall {
   .euiPage {
-    padding: $euiSizeL 0;
+    padding: $euiSize 0;
   }
 }
