--- a/src/components/form/checkbox/_checkbox.scss
+++ b/src/components/form/checkbox/_checkbox.scss
@@ -16,8 +16,12 @@
     cursor: pointer;
 
     &:checked ~ .euiCheckbox__square {
+      background: $euiColorPrimary;
+      border-color: $euiColorPrimary;
+
       .euiCheckbox__check {
-        background-color: $euiTextColor;
+        border-color: $euiColorPrimary;
+        background-color: $euiColorEmptyShade;
         // This path is relative to ~/src-docs/postcss.config.js, which uses
         // the postcss-line-svg plugin.
         mask: svg-load('../src/components/icon/assets/check.svg') center center no-repeat;
@@ -26,16 +30,27 @@
 
     &:focus ~ .euiCheckbox__square,
     &:active:not(:disabled) ~ .euiCheckbox__square {
-      background-color: $euiFocusBackgroundColor;
+      box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.1);
       border-color: $euiColorPrimary;
+      border-width: $euiSizeXS / 2;
     }
 
-    &:disabled ~ .euiCheckbox__square {
-      background-color: $euiColorLightestShade;
-
+    &:focus:checked ~.euiCheckbox__square {
+      border-color: darken($euiColorPrimary, 10%);
     }
+
+    &:disabled,
     &:disabled ~ .euiCheckbox__label {
       cursor: not-allowed;
+    }
+
+    &:disabled:checked ~ .euiCheckbox__square {
+      background-color: $euiColorLightShade;
+      border-color: $euiColorLightShade;
+    }
+
+    &:disabled:not(:checked) ~ .euiCheckbox__square {
+      background-color: $euiColorLightestShade;
     }
   }
 
@@ -47,6 +62,7 @@
     border: $euiBorderThin;
     background: $euiFormBackgroundColor;
     z-index: 0;
+    box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.1);
   }
 
     .euiCheckbox__check {
@@ -65,19 +81,16 @@
   }
 
   &.euiCheckbox--inList {
+    min-height: $euiSize;
+
+    .euiCheckbox__square {
+      height: $euiSize;
+      width: $euiSize;
+    }
+
     .euiCheckbox__input {
-      &:checked ~ .euiCheckbox__square {
-        background: $euiColorPrimary;
-        border-color: $euiColorPrimary;
-
-        .euiCheckbox__check {
-          background-color: $euiColorEmptyShade;
-        }
-      }
-
-      &:focus:checked ~.euiCheckbox__square {
-        background: tintOrShade($euiColorPrimary, 20%, 20%);
-      }
+      height: $euiSize;
+      width: $euiSize;
     }
   }
 }
