--- a/src/components/form/switch/_switch.scss
+++ b/src/components/form/switch/_switch.scss
@@ -21,11 +21,10 @@
   }
 
   .euiSwitch__input:focus + .euiSwitch__body {
-    background: $euiColorEmptyShade;
 
     .euiSwitch__thumb {
       border-color: $euiColorPrimary;
-      background-color: $euiColorPrimary;
+      border-width: $euiSizeXS / 2;
     }
   }
 
@@ -33,8 +32,8 @@
     pointer-events: none;
     width: $euiSwitchWidth;
     height: $euiSwitchHeight;
-    background: $euiFormBackgroundColor;
-    box-shadow: inset 0 0 0 1px $euiBorderColor;
+    background-color: $euiColorPrimary;
+    box-shadow: none;
     display: inline-block;
     position: relative;
     border-radius: $euiSwitchHeight;
@@ -77,7 +76,7 @@
   .euiSwitch__icon--checked {
     right: auto;
     left: -$euiSizeS;
-    fill: $euiTextColor;
+    fill: $euiColorEmptyShade;
   }
 
   /**
@@ -100,15 +99,26 @@
     cursor: not-allowed;
   }
 
+  .euiSwitch__input:checked:disabled ~ .euiSwitch__body {
+    background: $euiColorLightShade;
+  }
+
   .euiSwitch__input:disabled ~ .euiSwitch__body {
     background: $euiColorLightestShade;
     box-shadow: 0 0 0 1px rgba(0,0,0,0.08);
+  }
+
+  .euiSwitch__input:checked:focus + .euiSwitch__body .euiSwitch__thumb {
+    border-color: darken($euiColorPrimary, 10%)
   }
 
   /**
    * When input is not checked, we shift around the positioning of sibling/child selectors.
    */
   .euiSwitch__input:not(:checked) ~ .euiSwitch__body {
+    background-color: $euiFormBackgroundColor;
+    box-shadow: inset 0 0 0 1px $euiBorderColor;
+
     .euiSwitch__thumb {
       left: 0;
     }
