--- a/src/components/table/_index.scss
+++ b/src/components/table/_index.scss
@@ -1,6 +1,3 @@
-$euiTableCellPadding: $euiSizeM;
-$euiTableCellPaddingCompressed: $euiSizeS;
-
 /**
  * 1. Prevent cells from expanding based on content size. This substitutes for table-layout: fixed.
  */
@@ -10,13 +7,11 @@ $euiTableCellPaddingCompressed: $euiSizeS;
 }
 
 @mixin euiTableCellCheckbox {
-  width: $euiSizeL + $euiTableCellPadding;
+  width: $euiSize + $euiSizeS;
   vertical-align: middle;
 
   .euiTableCellContent {
     padding-right: 0;
-    padding-top: 0;
-    padding-bottom: 0;
   }
 }
 
