--- a/src/components/code_editor/_code_editor.scss
+++ b/src/components/code_editor/_code_editor.scss
@@ -1,5 +1,15 @@
 .euiCodeEditorWrapper {
   position: relative;
+
+  .ace_hidden-cursors {
+    opacity: 0;
+  }
+
+  &.euiCodeEditorWrapper-isEditing {
+    .ace_hidden-cursors {
+      opacity: 1;
+    }
+  }
 }
 
 .euiCodeEditorKeyboardHint {
