Add disabled prop to EuiContextMenuItem. (#172)

--- a/src/components/context_menu/_context_menu_item.scss
+++ b/src/components/context_menu/_context_menu_item.scss
@@ -11,6 +11,15 @@
   &:focus {
     background-color: $euiFocusBackgroundColor;
   }
+
+  &.euiContextMenuItem-isDisabled {
+    color: $euiButtonColorDisabled;
+    cursor: default;
+
+    &:hover, &:focus {
+      text-decoration: none;
+    }
+  }
 }
 
   .euiContextMenuItem__inner {
