Update EuiExpression with latest changes from KUI (#190)
* Fix bugs with documentation generator template and snippets.
* Add documentation page for EuiOutsideClickDetector.
* Update proptypes of EuiSelect to have correct shape of options.
* Update EuiExpression with latest changes from KUI and add documentation page.

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -12,6 +12,7 @@
 @import 'code_editor/index';
 @import 'context_menu/index';
 @import 'description_list/index';
+@import 'expression/index';
 @import 'flex/index';
 @import 'form/index';
 @import 'header/index';
