--- a/src/global_styling/variables/_borders.scss
+++ b/src/global_styling/variables/_borders.scss
@@ -7,3 +7,4 @@ $euiBorderColor: $euiColorLightShade;
 $euiBorderRadius: 4px;
 $euiBorderThick: $euiBorderWidthThick solid $euiBorderColor;
 $euiBorderThin: $euiBorderWidthThin solid $euiBorderColor;
+$euiBorderEditable: $euiBorderWidthThick dotted $euiBorderColor;
