New icon size of small, adjust coloring of sidenav arrows (#197)
Added a new value to the icon `size` prop of small. Also changed the coloring of `EuiSideNav` arrows.

--- a/src/components/icon/_icon.scss
+++ b/src/components/icon/_icon.scss
@@ -41,6 +41,10 @@
   fill: $euiColorDanger;
 }
 
+.euiIcon--small {
+  @include size($euiSizeM);
+}
+
 .euiIcon--medium {
   @include size($euiSize);
 }
