--- a/src/global_styling/reset/_reset.scss
+++ b/src/global_styling/reset/_reset.scss
@@ -39,7 +39,7 @@ em {
 }
 
 strong {
-  font-weight: 500;
+  font-weight: $euiFontWeightBold;
 }
 
 /* HTML5 display-role reset for older browsers */
