--- a/src/global_styling/variables/_typography.scss
+++ b/src/global_styling/variables/_typography.scss
@@ -42,6 +42,7 @@ $euiLineHeight:     1.5;
 $euiFontWeightLight:    300;
 $euiFontWeightRegular:  400;
 $euiFontWeightMedium:   500;
+$euiFontWeightBold:     700;
 
 // Our base fonts
 
