--- a/src/theme_k6_dark.scss
+++ b/src/theme_k6_dark.scss
@@ -1,5 +1,6 @@
 // These are variable overwrites used only for this theme.
-@import 'themes/eui/eui_colors_dark';
+@import 'themes/k6/k6_globals';
+@import 'themes/k6/k6_colors_dark';
 
 // Global styling
 @import 'global_styling/index';
