--- a/src/global_styling/reset/_reset.scss
+++ b/src/global_styling/reset/_reset.scss
@@ -68,6 +68,7 @@ body {
 
 a {
   text-decoration: none;
+  color: $euiColorPrimary;
 
   &:hover {
     text-decoration: none;
@@ -77,6 +78,10 @@ a {
     text-decoration: none;
     outline: none;
   }
+}
+
+a:hover, button, [role=button] {
+  cursor: pointer;
 }
 
 input {
