--- a/src/global_styling/variables/_size.scss
+++ b/src/global_styling/variables/_size.scss
@@ -1,10 +1,10 @@
-$euiSize:     16px;
+$euiSize:     16px !default;
 
-$euiSizeXS:   $euiSize * .25;
-$euiSizeS:    $euiSize * .5;
-$euiSizeM:    $euiSize * .75;
-$euiSizeL:    $euiSize * 1.5;
-$euiSizeXL:   $euiSize * 2;
-$euiSizeXXL:  $euiSize * 2.5;
+$euiSizeXS:   $euiSize * .25 !default;
+$euiSizeS:    $euiSize * .5 !default;
+$euiSizeM:    $euiSize * .75 !default;
+$euiSizeL:    $euiSize * 1.5 !default;
+$euiSizeXL:   $euiSize * 2 !default;
+$euiSizeXXL:  $euiSize * 2.5 !default;
 
-$euiButtonMinWidth: $euiSize * 7;
+$euiButtonMinWidth: $euiSize * 7 !default;
