Make EuiTitleS usable, make $euiFontSizeM a real thing (#204)
EuiTitle small upped to 18px.

--- a/src/components/call_out/_call_out.scss
+++ b/src/components/call_out/_call_out.scss
@@ -35,7 +35,7 @@ $callOutTypes: (
  * 3. Apply margin to all but last item in the flex.
  */
 .euiCallOutHeader {
-  @include euiFontSizeM;
+  @include euiFontSize;
   display: flex;
   align-items: baseline; /* 1 */
 
