--- a/src/components/description_list/_description_list.scss
+++ b/src/components/description_list/_description_list.scss
@@ -11,7 +11,7 @@
   &.euiDescriptionList--row {
 
     .euiDescriptionList__title {
-      @include euiFontSizeM;
+      @include euiFontSize;
       margin-top: $euiSize;
 
       // Make sure the first <dt> doesn't get a margine.
@@ -62,13 +62,13 @@
     }
 
     .euiDescriptionList__title {
-      @include euiFontSizeM;
+      @include euiFontSize;
       flex-basis: 50%;
       padding-right: $euiSizeS;
     }
 
     .euiDescriptionList__description {
-      @include euiFontSizeM;
+      @include euiFontSize;
       flex-basis: 50%;
       padding-left: $euiSizeS;
     }
