--- a/src/components/side_nav/_side_nav_item.scss
+++ b/src/components/side_nav/_side_nav_item.scss
@@ -99,7 +99,7 @@
 
     .euiSideNavItemButton__label {
       @include euiTitle;
-      font-size: $euiSize + 2px;
+      font-size: $euiFontSizeM;
     }
   }
 
