--- a/src/global_styling/variables/_typography.scss
+++ b/src/global_styling/variables/_typography.scss
@@ -27,7 +27,7 @@ $euiFontSize:       $euiSize !default;
 
 $euiFontSizeXS:     $euiFontSize * .75 !default;
 $euiFontSizeS:      $euiFontSize * .875 !default;
-$euiFontSizeM:      $euiFontSize !default;
+$euiFontSizeM:      $euiFontSize * 1.125 !default;
 $euiFontSizeL:      $euiFontSize * 1.5 !default;
 $euiFontSizeXL:     $euiFontSize * 2 !default;
 $euiFontSizeXXL:    $euiFontSize * 3 !default;
