--- a/src/components/toast/_toast.scss
+++ b/src/components/toast/_toast.scss
@@ -66,7 +66,7 @@ $toastTypes: (
  * 3. Account for close button.
  */
 .euiToastHeader {
-  @include euiFontSizeM;
+  @include euiFontSize;
   padding-right: $euiSizeL; /* 3 */
 
   display: flex;
