--- a/src/components/tooltip/_tooltip.scss
+++ b/src/components/tooltip/_tooltip.scss
@@ -21,17 +21,17 @@
   }
 
   // ANIMATING -- with slight delay
-  transition: 
+  transition:
     opacity $euiAnimSpeedNormal ease-out $euiAnimSpeedSlow,
     visibility $euiAnimSpeedNormal ease-out $euiAnimSpeedSlow,
     transform $euiAnimSpeedNormal ease-out $euiAnimSpeedSlow;
-  opacity: 0; 
-  visibility: hidden; 
+  opacity: 0;
+  visibility: hidden;
   transform: translateX(0) translateY($euiSize * -1) translateY(0); // default starting position of top
 
   // Don't delay the animation if the tooltip is on click
   .euiTooltip--click & {
-    transition: 
+    transition:
       opacity $euiAnimSpeedNormal ease-out,
       visibility $euiAnimSpeedNormal ease-out,
       transform $euiAnimSpeedNormal ease-out;
@@ -40,8 +40,8 @@
   &.euiTooltip-isVisible {
     opacity: 1;
     visibility: visible;
-    transform: translateX(0) translateY(0) translateZ(0) !important; 
-              // Using important here so we're always at (0,0,0) when visible, no matter the position. 
+    transform: translateX(0) translateY(0) translateZ(0) !important;
+              // Using important here so we're always at (0,0,0) when visible, no matter the position.
               // May need to revisit if we find override issues.
   }
 
@@ -59,8 +59,8 @@
     }
 }
 
-  // The tooltip content (for styling)  
-  
+  // The tooltip content (for styling)
+
   .euiTooltip__content {
 
     // Scoped variables for component-only re-use
@@ -70,13 +70,13 @@
 
     // STYLING
     @include euiBottomShadow;
-    @include euiFontSizeS();  
+    @include euiFontSizeS();
     background-color: $background-color;
     border-radius: $euiBorderRadius;
     padding: $euiSizeM;
     color: $text-color;
     white-space: nowrap;
-    
+
     // ARROW
     position: relative;
     &::before {
@@ -89,19 +89,19 @@
       background-color: $background-color;
       width: $arrow-size;
       height: $arrow-size;
-    
+
       // Positions
       .euiTooltip--right & {
         bottom: 50%;
         left: -$arrow-size/2;
         transform: translateY(50%) rotateZ(45deg);
       }
-     
+
       .euiTooltip--bottom & {
         bottom: auto;
         top: -$arrow-size/2;
       }
-     
+
       .euiTooltip--left & {
         bottom: 50%;
         left: auto;
@@ -113,8 +113,8 @@
 
   // The tooltip title if it exists
   .euiTooltip__title {
-    @include euiFontSizeM;
-    font-weight: $euiFontWeightMedium;    
+    @include euiFontSize;
+    font-weight: $euiFontWeightMedium;
     margin-bottom: $euiSizeS;
     border-bottom: $euiBorderWidthThin solid $euiColorDarkShade;
   }
