Creating new CSS class: euiFlexGroup--justifyContentSpaceEvenly (#205)
* [EuiFlexGroup] Adding `space-evenly` option to the `justify-content` CSS property

* Removing statement that is no longer true

--- a/src/components/flex/_flex_group.scss
+++ b/src/components/flex/_flex_group.scss
@@ -30,6 +30,10 @@ $gutterTypes: (
 }
 
 // Justify the grid
+.euiFlexGroup--justifyContentSpaceEvenly {
+  justify-content: space-evenly;
+}
+
 .euiFlexGroup--justifyContentSpaceBetween {
   justify-content: space-between;
 }
