--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -31,6 +31,7 @@
 @import 'progress/index';
 @import 'side_nav/index';
 @import 'spacer/index';
+@import 'steps/index';
 @import 'table/index';
 @import 'tabs/index';
 @import 'title/index';
