--- a/src/components/form/form_help_text/_form_help_text.scss
+++ b/src/components/form/form_help_text/_form_help_text.scss
@@ -1,5 +1,5 @@
 .euiFormHelpText {
-  font-size: $euiFontSizeXS;
+  @include euiFontSizeXS;
   padding: $euiSizeS 0;
   color: $euiColorDarkShade;
 }
