Updating Popovers to use Panel Padding vars (#229)
Popovers with titles no longer require padding to be manually added to the popover's child that follows the title.

--- a/src/components/panel/_panel.scss
+++ b/src/components/panel/_panel.scss
@@ -6,16 +6,10 @@
   border-radius: $euiBorderRadius;
   flex-grow: 1;
 
-  &.euiPanel--paddingSmall {
-    padding: $euiSizeS;
-  }
-
-  &.euiPanel--paddingMedium {
-    padding: $euiSize;
-  }
-
-  &.euiPanel--paddingLarge {
-    padding: $euiSizeL;
+  @each $modifier, $amount in $euiPanelPaddingModifiers {
+    &.euiPanel--#{$modifier} {
+      padding: $amount;
+    }
   }
 
   &.euiPanel--shadow {
