--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -15,6 +15,7 @@
 @import 'error_boundary/index';
 @import 'expression/index';
 @import 'flex/index';
+@import 'flyout/index';
 @import 'form/index';
 @import 'header/index';
 @import 'health/index';
@@ -24,6 +25,7 @@
 @import 'link/index';
 @import 'loading/index';
 @import 'modal/index';
+@import 'overlay_mask/index';
 @import 'page/index';
 @import 'pagination/index';
 @import 'panel/index';
