--- a/src/components/overlay_mask/_overlay_mask.scss
+++ b/src/components/overlay_mask/_overlay_mask.scss
@@ -1,4 +1,4 @@
-.euiModalOverlay {
+.euiOverlayMask {
   position: fixed;
   z-index: $euiZMask;
   top: 0;
@@ -6,9 +6,13 @@
   right: 0;
   bottom: 0;
   display: flex;
-  background: transparentize($euiColorEmptyShade, .1);
+  background: transparentize($euiColorEmptyShade, .2);
   align-items: center;
   justify-content: center;
   padding-bottom: 10vh;
   animation: euiAnimFadeIn $euiAnimSpeedFast ease-in;
+}
+
+.euiBody-hasOverlayMask {
+  overflow: hidden;
 }
