Fix responsive flex group margins (#248)

--- a/src/components/flex/_flex_group.scss
+++ b/src/components/flex/_flex_group.scss
@@ -70,5 +70,7 @@ $gutterTypes: (
 @include screenXSmall {
   .euiFlexGroup--responsive {
     flex-wrap: wrap;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
