--- a/src/components/flex/_flex_item.scss
+++ b/src/components/flex/_flex_item.scss
@@ -27,6 +27,7 @@
     width: 100% !important;
     flex-basis: 100% !important;
     margin-left: 0 !important;
+    margin-right: 0 !important;
     margin-bottom: $euiSize !important;
   }
 }
