Remove pointer events on form select caret icon (#255)

--- a/src/components/form/form_control_layout/_form_control_layout.scss
+++ b/src/components/form/form_control_layout/_form_control_layout.scss
@@ -13,6 +13,7 @@
     position: absolute;
     top: $euiSizeM;
     left: $euiSizeM;
+    pointer-events: none;
   }
 
   .euiFormControlLayout__icon--right {
