Disabled tab styling (#258)
Tabs now have a proper disabled state.

--- a/src/components/tabs/_tabs.scss
+++ b/src/components/tabs/_tabs.scss
@@ -30,6 +30,16 @@
     text-decoration: underline;
   }
 
+  &.euiTab-isDisabled {
+    color: $euiColorMediumShade;
+
+    &:hover {
+      cursor: not-allowed;
+      text-decoration: none;
+      color: $euiColorMediumShade;
+    }
+  }
+
   &.euiTab-isSelected {
     cursor: default;
     color: $euiColorPrimary;
