--- a/src/components/icon/_icon.scss
+++ b/src/components/icon/_icon.scss
@@ -41,6 +41,10 @@
   fill: $euiColorDanger;
 }
 
+.euiIcon--ghost {
+  fill: $euiColorGhost;
+}
+
 .euiIcon--small {
   @include size($euiSizeM);
 }
