--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -21,6 +21,7 @@
 @import 'health/index';
 @import 'horizontal_rule/index';
 @import 'icon/index';
+@import 'image/index';
 @import 'key_pad_menu/index';
 @import 'link/index';
 @import 'loading/index';
