Added a small version of the EuiCallOut (#269)
* Added a small (`size=“s”`) version of the `EuiCallOut`

--- a/src/components/call_out/_call_out.scss
+++ b/src/components/call_out/_call_out.scss
@@ -1,6 +1,10 @@
 .euiCallOut {
   padding: $euiSize;
   border-left: $euiSizeXS / 2 solid transparent;
+
+  &.euiCallOut--small {
+    padding: $euiSizeS;
+  }
 }
 
 // Modifier naming and colors.
@@ -45,6 +49,11 @@ $callOutTypes: (
 
   > * + * {
     margin-left: $euiSizeS; /* 3 */
+  }
+
+  // smaller font size for headers in small callout
+  .euiCallOut--small & {
+    @include euiFontSizeS;
   }
 }
 
